# RqCore

./: .gitignore  LICENSE  README.md  RqCoreVsCode.code-workspace
admin/: deploy_rqcoresrv.sh  dynamic_ip_dnsupdate.sh  https_certs_create.sh  https_certs_renew.sh
docs/coding/: rust_style_guide.md
docs/coding/vscode/: vscode_tricks.md
docs/design/: design_notes.md
src/: rust-toolchain.toml
src/common/broker-common/: Cargo.toml
src/common/broker-common/src/: brokers_watcher.rs  gateway.rs  lib.rs
src/common/memdb/: Cargo.toml
src/common/memdb/src/: lib.rs  mark_value_cache.rs
src/common/rqcommon/: Cargo.toml
src/common/rqcommon/src/: lib.rs  rqerror.rs  rqhelper.rs
src/common/rqcommon/src/utils/: mod.rs  rqemail.rs  rqgsheets.rs  rqlog.rs  runningenv.rs  server_ip.rs  time.rs
src/rqcoresrv/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/rqcoresrv/src/: main.rs  main_web.rs
src/rqcoresrv/src/broker_common/: broker_watcher.rs  brokers_watcher.rs
src/rqcoresrv/src/middleware/: browser_cache_control.rs  http_request_logger.rs  mod.rs  server_diagnostics.rs  user_account.rs
src/rqcoresrv/src/robotrader/: fast_runner.rs  fast_runner_task.rs  mod.rs  robo_trader.rs  robotrader.rs
src/rqcoresrv/src/services/: fast_runer.rs  fast_runner.rs  fast_running.rs  mod.rs  rqtask_scheduler.rs
src/rqcoresrv/src/test_websocket/: test_ws.rs
src/rqcoresrv/src/webapps/: mod.rs
src/rqcoresrv/src/webapps/robotrader_ui/: robotrader.ts  robotrader_ui.rs
src/rqcoresrv/src/webapps/test_websocket/: mod.rs  test_ws.rs
src/rqcoresrv/src/webapps/withdrawal_simulator/: withdrawal_simulator.ts
src/rqcoresrv/src_webapps/test_ts2js/: test_ts2js.ts
src/rqcoresrv/src_webapps/test_websocket/: test_ws.rs
src/rqcoresrv/static/: index.html  index_dev.html  index_nouser.html
src/rqcoresrv/static/robotrader/: index.html  robotrader.css
src/rqcoresrv/static/taconite/: index.html  index_nouser.html
src/rqcoresrv/static/test_ts2js/: index.html
src/rqcoresrv/static/test_websocket/: index.html
src/rqcoresrv/static/withdrawal_simulator/: index.html
src/tools/agy/open_urls_together/: Cargo.toml
src/tools/agy/open_urls_together/src/: main.rs
