[package]
name = "rqcoresrv"
version = "0.1.0"
edition = "2024"

# Periodically upgrade packages to latest Patch version. Do it on Linux live server too.
# E.g. ibapi = "2.1" allows “any (Major.Minor.Patch) version ≥2.1.0 and <2.2.0”, but patch version is not automatically applied.
# If you want to upgrade "cargo update -p ibapi --verbose" or "cargo update" to update every version to the max patch version.

# For inner dependencies, run 'cargo tree' or e.g. 'cargo tree | grep -E "(openssl|ibapi)"' (not show the real dependency) or just one package: 'cargo tree -p ibapi'
[dependencies]
tokio = { version = "1.0", features = ["full"] }
# tokio   = { version = "1.48", features = ["fs", "macros", "rt-multi-thread"] }
log = "0.4.28"
spdlog-rs = {version = "0.5", features = ["source-location", "log"]}
env_filter = "0.1.4" # spdlog-rs requires this for supporting env_filter::Builder::new().try_parse("RUST_LOG") using log level in env variable
time = "0.3.43"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
actix-files = "0.6.8"
actix-web = { version = "4.12", features = ["rustls-0_23"] }
actix-ws = "0.2"
futures-util = "0.3"
actix-identity = "0.7" # Stores logged-in user identity (e.g., user ID/email) using secure cookies.
actix-session = { version = "0.9", features = ["cookie-session"] }  # Maintains user session data across requests using encrypted cookies.
rustls = "0.23"
rustls-pemfile = "2"
# Reqwest's default features include BOTH rustls-tls AND default-tls (which pulls hyper-tls → native-tls → openssl-sys). We should use rustls, not the openssl libraries of the Linux system.
# reqwest = { version = "0.12", features = ["rustls-tls", "http2", "json"] }
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

percent-encoding = "2"

# ibapi: Async only (default features)
ibapi = "2.6"
# Async + blocking together
# ibapi = { version = "2.0", default-features = false, features = ["sync", "async"] }

rqcommon = { path = "../common/rqcommon" }

[dev-dependencies]
