[package]
name = "broker-common"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.29"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"

# ibapi: Async only (default features)
ibapi = "2.6"
# Async + blocking together
# ibapi = { version = "2.0", default-features = false, features = ["sync", "async"] }

rqcommon = { path = "../rqcommon" }