[package]
name = "rqcommon"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.29"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
csv = "1.3"
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "json"], default-features = false }
google-sheets4 = "7"
yup-oauth2 = "12"